--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,10 @@
 .app.light {
 	--bg-color: #e8e8ea;
+	--inverted-bg-color: #0e0e75;
 
-	--primary-color: #041c65;
+	--primary-color: #6d7795;
 	--secondary-color: #0449e0;
+
+	--inverted-primary-color: #049604;
+	--inverted-secondary-color: #04ff04;
 }
