--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,4 +1,5 @@
 :root {
+	//fonts
 	--font-family-main: Consolas, "Times New Roman", Serif;
 
 	--font-size-m: 16px;
@@ -8,4 +9,11 @@
 	--font-size-l: 24px;
 	--font-line-l: 32px;
 	--font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+
+	//navbar
+	--navbar-height: 50px;
+
+	//sidebar
+	--sidebar-width: 300px;
+	--sidebar-width-collapsed: 80px;
 }
