--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,19 +1,17 @@
 :root {
-	//fonts
-	--font-family-main: Consolas, "Times New Roman", Serif;
+    //fonts
+    --font-family-main: consolas, "Times New Roman", serif;
+    --font-size-m: 16px;
+    --font-line-m: 24px;
+    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+    --font-size-l: 24px;
+    --font-line-l: 32px;
+    --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
-	--font-size-m: 16px;
-	--font-line-m: 24px;
-	--font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+    //navbar
+    --navbar-height: 50px;
 
-	--font-size-l: 24px;
-	--font-line-l: 32px;
-	--font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
-
-	//navbar
-	--navbar-height: 50px;
-
-	//sidebar
-	--sidebar-width: 300px;
-	--sidebar-width-collapsed: 80px;
+    //sidebar
+    --sidebar-width: 300px;
+    --sidebar-width-collapsed: 80px;
 }
